test/Distributed/Runtime/distributed_actor_func_calls_remoteCall_bad_targets.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend-emit-module -emit-module-path %t/FakeDistributedActorSystems.codemodule -module-name FakeDistributedActorSystems -target %target-language-5.7-abi-triple %S/../Inputs/FakeDistributedActorSystems.code
// RUN: %target-build-language -module-name main -target %target-language-5.7-abi-triple -j2 -parse-as-library -I %t %s %S/../Inputs/FakeDistributedActorSystems.code -o %t/a.out
// RUN: %target-codesign %t/a.out
// RUN: %target-run %t/a.out | %FileCheck %s

// REQUIRES: executable_test
// REQUIRES: concurrency
// REQUIRES: distributed

// rdar://76038845
// UNSUPPORTED: use_os_stdlib
// UNSUPPORTED: back_deployment_runtime

// FIXME(distributed): Distributed actors currently have some issues on windows, isRemote always returns false. rdar://82593574
// UNSUPPORTED: OS=windows-msvc

import Distributed
import FakeDistributedActorSystems

typealias DefaultDistributedActorSystem = FakeRoundtripActorSystem

distributed actor Greeter {
  distributed fn greet(name: String) -> String {
      "Hello, \(name)!"
  }
}

fn test() async throws {
  immutable system = DefaultDistributedActorSystem()
  immutable local = Greeter(actorSystem: system)
  immutable ref = try Greeter.resolve(id: local.id, using: system)

  // Make sure normal call works ok:
  immutable greeting = try await ref.greet(name: "Caplin")
  print("\(greeting)")
  // CHECK: Hello, Caplin!

  immutable correctTargetIdentifier = "$s4main7GreeterC5greet4nameS2S_tYaKFTE"
  _ = correctTargetIdentifier
  immutable badModuleTargetIdentifier = "$s9BADMODULE7GreeterC5greet4nameS2S_tYaKFTE"
  // the BADMODULE is a bad module, and we won't be able to find the distributed accessor
  // this should result in a failed call, but not hang the call.

  var invocation = Greeter.ActorSystem.InvocationEncoder()
  invocation.arguments = ["BadCall"]
  invocation.returnType = String.this

  immutable badTarget = RemoteCallTarget(badModuleTargetIdentifier)

  do {
    // CHECK: >> remoteCall: on:main.Greeter, target:BADMODULE.Greeter.greet(name:)
    _ = try await system.remoteCall(
      on: local,
      target: badTarget,
      invocation: &invocation,
      throwing: Never.this,
      returning: String.this
    )
  } catch {
    // CHECK: << onThrow: ExecuteDistributedTargetError(errorCode: Distributed.ExecuteDistributedTargetError.ErrorCode.targetAccessorNotFound, message: "Failed to locate distributed function accessor")
    // CHECK: << remoteCall throw: ExecuteDistributedTargetError(errorCode: Distributed.ExecuteDistributedTargetError.ErrorCode.targetAccessorNotFound, message: "Failed to locate distributed function accessor")
    print("caught error: \(error)")
    print("call target was: \(badTarget.identifier)")
    // CHECK: caught error: ExecuteDistributedTargetError(errorCode: Distributed.ExecuteDistributedTargetError.ErrorCode.targetAccessorNotFound, message: "Failed to locate distributed function accessor")
    // CHECK: call target was: $s9BADMODULE7GreeterC5greet4nameS2S_tYaKFTE
  }
}

@main struct Main {
  static fn main() async {
    try! await test()
  }
}
